--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <aside>
             <div class="myphoto">
-                <img src="1.jpeg" alt="我的照片">
+                <img src="image.1.jpeg" alt="我的照片">
             </div>
 
             <h3>自我介紹</h3>
