--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <aside>
             <div class="myphoto">
-                <img src="image.1.jpeg" alt="我的照片">
+                <img src="image/1.jpeg" alt="我的照片">
             </div>
 
             <h3>自我介紹</h3>
@@ -51,7 +51,7 @@
 <h2>大學經歷</h2>
 <section class="mye">
     
-    <img src="2..jpeg" alt="管理學專案圖片">
+    <img src="image/2..jpeg" alt="管理學專案圖片">
 
     <h4>管理學服務學習專案 - 組長</h4>
     <p><strong>[ 專案日期2025.05]</strong></p>
