Revise project details and add images in index.html
Updated project descriptions and added images.

--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
 <h2>大學經歷</h2>
 <section class="mye">
     
-    <img src="image/2.jpeg" alt="EMT">
 
     <h4>管理學服務學習專案 - 組長</h4>
     <p><strong>[ 專案日期2025.05]</strong></p>
     <ul>
         <li>擔任組長，負責分工、協調、掌握進度。</li>
-        <li>主導服務學習專案，成功去捐血中心擔任志工。</li>
+        <li>主導 [專案主題，例如：為 OO 基金會設計的募款活動]，成功 [具體的成果，例如：達成募款目標或完成服務時數]。</li>
         <li>從實作中學習領導力，並培養面對突發狀況的解決能力。</li>
     </ul>
 
@@ -73,6 +72,8 @@
         <li>完成 40 小時以上的專業救護訓練，包含 CPR+AED、創傷評估、止血包紮等。</li>
         <li>具備在壓力下執行任務的能力，並能冷靜應對緊急事件。</li>
     </ul>
+    <img src="image/2..jpeg" alt="ＥＭＴ">
+    <img src="image/3..jpg" alt="管理學">
     
 </section>
     <h2>社團經歷</h2>
