--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
         <li>完成 40 小時以上的專業救護訓練，包含 CPR+AED、創傷評估、止血包紮等。</li>
         <li>具備在壓力下執行任務的能力，並能冷靜應對緊急事件。</li>
     </ul>
-    <img src="image/2.jpeg" alt="EMT1">
-    <img src="image/3.jpg" alt="管理學">
-    
+    <div class="myeim">
+        <img src="image/2.jpeg" alt="ＥＭＴ">
+        <img src="image/3.jpg" alt="管理學">
+    </div>
 </section>
     <h2>社團經歷</h2>
         <section class="mye">
