Change alt text for EMT image to lowercase

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <li>具備在壓力下執行任務的能力，並能冷靜應對緊急事件。</li>
     </ul>
     <div class="myeim">
-        <img src="image/2.jpeg" alt="ＥＭＴ">
+        <img src="image/2.jpeg" alt="emt">
         <img src="image/3.jpg" alt="管理學">
     </div>
 </section>
