--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <footer>
                 <span>
                     <i class="fas fa-envelope"></i>
-                    電子信箱：s11344144@cycu.edu.tw
+                    <pre>IG:@12345 電子信箱：s11344144@cycu.edu.tw</pre>
                 </span>
             </footer>
         </div>
