--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <li>具備在壓力下執行任務的能力，並能冷靜應對緊急事件。</li>
     </ul>
 
-        <img src="image/3..jpg" alt="管理學"> 
-        <img src="image/6..jpeg" alt="ＥＭＴ1">  
+        <img src="image/3.jpg" alt="管理學"> 
+        <img src="image/6.jpeg" alt="ＥＭＴ1">  
 
 </section>
     <h2>社團經歷</h2>
