--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <footer>
                 <span>
                     <i class="fas fa-envelope"></i>
-                    <pre>IG:@12345     電子信箱：s11344144@cycu.edu.tw</pre>
+                    <pre><h2>IG:@12345     電子信箱：s11344144@cycu.edu.tw</h2></pre>
                 </span>
             </footer>
         </div>
