--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p><strong>[ 專案日期2025.05]</strong></p>
     <ul>
         <li>擔任組長，負責分工、協調、掌握進度。</li>
-        <li>主導 [專案主題，例如：為 OO 基金會設計的募款活動]，成功 [具體的成果，例如：達成募款目標或完成服務時數]。</li>
+        <li>主導服務學習專案，成功到捐血中心擔任志工。</li>
         <li>從實作中學習領導力，並培養面對突發狀況的解決能力。</li>
     </ul>
 
